17 setup authorization with spotify web api (#18)
* Ignore node_modules and un-track them in git

* Add login endpoint that redirects to spotify for now
